@@ -33,7 +33,6 @@ import com.vaadin.ui.Window;
 import org.apache.commons.lang3.StringUtils;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -105,8 +104,7 @@ public class ItemBankUploadWindow extends Window {
             }
         } else {
             Windows.showValidationErrorWindow(
-                Arrays.asList(itemBankNameField, uploadField, accountNumberField, licenseeNameField,
-                    periodEndDateField));
+                List.of(itemBankNameField, uploadField, accountNumberField, licenseeNameField, periodEndDateField));
         }
     }
 
