@@ -6,13 +6,14 @@ import static org.junit.Assert.assertFalse;
 
 import com.vaadin.data.ValidationResult;
 import com.vaadin.data.ValueContext;
+
 import org.apache.commons.lang3.StringUtils;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 /**
  * Verifies {@link CoverageYearsValidator}.
@@ -42,7 +43,7 @@ public class CoverageYearsValidatorTest {
 
     @Parameterized.Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
+        return List.of(new Object[][]{
             {null, true},
             {StringUtils.EMPTY, true},
             {"  ", true},
