@@ -28,7 +28,6 @@ import org.junit.Before;
 import org.junit.Test;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -63,7 +62,7 @@ public class NtsBatchStatusWidgetTest {
         Grid<?> grid = (Grid<?>) component;
         UiTestHelper.verifyWindow(grid, null, 100, 100, Unit.PERCENTAGE);
         assertEquals("batch-status-grid", grid.getId());
-        UiTestHelper.verifyGrid(grid, Arrays.asList(
+        UiTestHelper.verifyGrid(grid, List.of(
             Triple.of("Usage Batch Name", -1.0, -1),
             Triple.of("Total Count", 130.0, -1),
             Triple.of("Work Found", 130.0, -1),
