@@ -25,7 +25,6 @@ import org.junit.runner.RunWith;
 import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -92,7 +91,7 @@ public class AggregateLicenseeClassFilterWidgetTest {
         expectLastCall().once();
         replay(filterWindow, Windows.class);
         aggregateLicenseeClassFilterWidget.showFilterWindow();
-        assertEquals(Arrays.asList("26", "Law Firms"), providerCapture.getValue().apply(aggregateLicenseeClass));
+        assertEquals(List.of("26", "Law Firms"), providerCapture.getValue().apply(aggregateLicenseeClass));
         verify(filterWindow, Windows.class);
     }
 
